@@ -1,5 +1,7 @@
 package com.example.TheBlog.config;
 
+import com.example.TheBlog.utils.AppConstants;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationProvider;
@@ -12,38 +14,44 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfiguration {
+
     private final AuthenticationProvider authenticationProvider;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    public SecurityConfiguration(
-            JwtAuthenticationFilter jwtAuthenticationFilter,
-            AuthenticationProvider authenticationProvider
-    ) {
-        this.authenticationProvider = authenticationProvider;
+    @Value("${CLIENT_URL:http://localhost:5173}")
+    private String clientUrl;
+
+    @Value("${BACKEND_URL:http://localhost:8080}")
+    private String backendUrl;
+
+    public SecurityConfiguration(JwtAuthenticationFilter jwtAuthenticationFilter,
+                                 AuthenticationProvider authenticationProvider) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+        this.authenticationProvider = authenticationProvider;
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/auth/**").permitAll()
-                        .requestMatchers("/categories/**").permitAll()
-                        .requestMatchers("/posts/upload").authenticated()
-                        .requestMatchers("/posts/**").permitAll()
+                        .requestMatchers(AppConstants.Api.AUTH_BASE).permitAll()
+                        .requestMatchers(AppConstants.Api.CATEGORIES_BASE).permitAll()
+                        .requestMatchers(AppConstants.Api.POST_UPLOAD).authenticated()
+                        .requestMatchers(AppConstants.Api.POSTS_BASE).permitAll()
+                        .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider)
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -53,14 +61,21 @@ public class SecurityConfiguration {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("${CLIENT_URL}", "${BACKEND_URL}", "http://localhost:8080", "http://localhost:5173"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        List<String> origins = new ArrayList<>();
+        origins.add(clientUrl);
+        origins.add(backendUrl);
+        origins.add("http://localhost:8080");
+        origins.add("http://localhost:5173");
+        configuration.setAllowedOrigins(origins);
+        configuration.setAllowedMethods(List.of(AppConstants.Security.ALLOWED_METHODS));
+        configuration.setAllowedHeaders(Arrays.asList(
+                AppConstants.Security.AUTH_HEADER,
+                AppConstants.Security.CONTENT_TYPE_HEADER
+        ));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
         return source;
     }
 }
